<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.leanback.tab.LeanbackViewPager
        android:id="@+id/view_pager_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_description_view_pager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rel_main_holder"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_layout_height"
        android:padding="@dimen/rel_main_holder_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imageview_content_description"
            android:focusable="false"
            android:src="@drawable/willow_tv_logo" />

        <androidx.leanback.tab.LeanbackTabLayout
            android:id="@+id/tab_layout"
            style="@style/style.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/tab_layout_left_margin"
            android:layout_marginEnd="@dimen/tab_layout_left_margin"
            android:layout_toLeftOf="@id/login"
            android:layout_toRightOf="@id/logo"
            android:contentDescription="@string/tab_layout_content_description" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/profile_content_description"
            android:drawableEnd="@drawable/profile_logo"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_14sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>