<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tv.ui.login.LaunchLoginFragment">



    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:src="@drawable/bg_signin_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/start_gradient_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:id="@+id/logoWillow"
        android:src="@drawable/willow_logo_in_open_state"
        android:layout_marginTop="125dp"
        android:layout_marginStart="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_login_subtitle"
        android:text="@string/tons_of_cricket_matches_infomation"
        android:id="@+id/txtTitle"
        android:textStyle="bold"
        style="@style/TvFontFamilyStyle"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logoWillow"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_login_subtitle3"
        android:id="@+id/txtDesc1"
        android:layout_marginTop="12dp"
        android:layout_marginStart="75dp"
        style="@style/TvFontFamilyStyle"
        android:text="@string/interactive_scorecard_commentary"
        app:drawableStartCompat="@drawable/ic_blue_check_circle"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_login_subtitle3"
        android:id="@+id/txtDesc2"
        android:layout_marginTop="12dp"
        android:layout_marginStart="75dp"
        android:text="@string/watch_live_cricket_in_hd"
        style="@style/TvFontFamilyStyle"
        app:drawableStartCompat="@drawable/ic_blue_check_circle"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc1"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_login_subtitle3"
        android:id="@+id/txtDesc3"
        android:layout_marginTop="12dp"
        android:layout_marginStart="75dp"
        android:text="@string/replays_highlights"
        style="@style/TvFontFamilyStyle"
        app:drawableStartCompat="@drawable/ic_blue_check_circle"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignInSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or_signup"
        android:layout_marginStart="75dp"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14sp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:focusable="true"
        style="@style/TvFontFamilyStyle"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        app:backgroundTint="#4A5050"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc3" />


</androidx.constraintlayout.widget.ConstraintLayout>